--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Composer Test 2",
     "license": "MIT",
     "require": {
-        "php" : ">=7.0",
+        "php": "^7.1.3",
         "monolog/monolog": "^2.0",
         "symfony/yaml": "^4.3",
         "nathanchanteux/composer-test" : "dev-master"
@@ -18,5 +18,6 @@
         "psr-4": {
             "nc\\": "nc/"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
