--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "php": "^7.1.3",
         "monolog/monolog": "^2.0",
         "symfony/yaml": "^4.3",
+        
+    },
+    "require-dev": {
         "nathanchanteux/composer-test" : "^1.0.x-dev"
     },
     "authors": [
