--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,8 @@
     "require": {
         "php": "^7.1.3",
         "monolog/monolog": "^2.0",
-        "symfony/yaml": "^4.3"        
-    },
-    "require-dev": {
-        "nathanchanteux/composer-test" : "^1.0.x-dev"
+        "symfony/yaml": "^4.3",
+        "nathanchanteux/composer-test" : "@dev"
     },
     "authors": [
         {
