--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "php": "^7.1.3",
         "monolog/monolog": "^2.0",
         "symfony/yaml": "^4.3",
-        "nathanchanteux/composer-test" : "dev-master"
+        "nathanchanteux/composer-test" : "^1.0.x-dev"
     },
     "authors": [
         {
@@ -20,6 +20,7 @@
         }
     },
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
