--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "require": {
         "php": "^7.1.3",
         "monolog/monolog": "^2.0",
-        "symfony/yaml": "^4.3",
-        "nathanchanteux/composer-test" : "1.0.x-dev"
+        "symfony/yaml": "^4.3"
     },
     "authors": [
         {
