--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "php": "^7.1.3",
         "monolog/monolog": "^2.0",
         "symfony/yaml": "^4.3",
-        "nathanchanteux/composer-test" : "^1.*"
+        "nathanchanteux/composer-test" : "1.*"
     },
     "authors": [
         {
